mm/mmap.c: fix arithmetic overflow in __vm_enough_memory()

--- a/src/assets/scss/front-end/HomeIntro.scss
+++ b/src/assets/scss/front-end/HomeIntro.scss
@@ -82,4 +82,9 @@ $f-color: #838e9e;
           .i-con {
             width: 5rem;
             height: 5rem;
-            line
+            line-height: 3.5rem;
+            align-self: center;
+          }
+
+          p {
+      
